# cs550-ct-verif

./: .gitignore  Vagrantfile  paths.sh
examples/aes/: Makefile  harness-instrumented.bpl  harness.bpl  harness.c  rijndael-alg-fst.c  rijndael-alg-fst.h  rijndaelEncrypt_wrapper-instrumented.bpl  rijndaelEncrypt_wrapper.bpl  setup.sh
examples/aes_apple/: AESAssembly.h  aes.c  data.c  run.sh
examples/amazon-s2n/: run.sh  s2n.c
examples/fail/openssl/: .gitignore  CMakeLists.txt  NOTES-CMAKE.md  README.md
examples/fail/openssl/apps/: CMakeLists.txt
examples/fail/openssl/crypto/: CMakeLists.txt
examples/fail/openssl/crypto/bn/: bn_prime.c
examples/fail/openssl/crypto/ffc/: ffc_key_generate.c
examples/fail/openssl/crypto/rsa/: rsa_gen.c
examples/fail/openssl/providers/implementations/ciphers/: ciphercommon_block.c
examples/fail/openssl/ssl/: CMakeLists.txt
examples/fail/sha/: run.sh  sha.c
examples/playground/: Makefile  forloop.c
examples/rlwe/: sample_ct-instrumented.bpl  sample_ct.bpl
examples/sodium/: Makefile  aead-instrumented.bpl  aead.bpl  chacha20-instrumented.bpl  chacha20.bpl  poly1305-instrumented.bpl  poly1305.bpl  salsa20-instrumented.bpl  salsa20.bpl  sha256-instrumented.bpl  sha256.bpl  sha512-instrumented.bpl  sha512.bpl
examples/sodium/libsodium/: Makefile  config.status  libtool
examples/sodium/libsodium/dist-build/: Makefile
examples/sodium/libsodium/msvc-scripts/: Makefile
examples/sodium/libsodium/src/: Makefile
examples/sodium/libsodium/src/libsodium/: Makefile
examples/sodium/libsodium/src/libsodium/crypto_aead/chacha20poly1305/sodium/.deps/: libsodium_la-aead_chacha20poly1305.Plo
examples/sodium/libsodium/src/libsodium/crypto_auth/.deps/: libsodium_la-crypto_auth.Plo
examples/sodium/libsodium/src/libsodium/crypto_auth/hmacsha256/.deps/: libsodium_la-auth_hmacsha256_api.Plo
examples/sodium/libsodium/src/libsodium/crypto_auth/hmacsha256/cp/.deps/: libsodium_la-hmac_hmacsha256.Plo  libsodium_la-verify_hmacsha256.Plo
examples/sodium/libsodium/src/libsodium/crypto_auth/hmacsha512/.deps/: libsodium_la-auth_hmacsha512_api.Plo
examples/sodium/libsodium/src/libsodium/crypto_auth/hmacsha512/cp/.deps/: libsodium_la-hmac_hmacsha512.Plo  libsodium_la-verify_hmacsha512.Plo
examples/sodium/libsodium/src/libsodium/crypto_auth/hmacsha512256/.deps/: libsodium_la-auth_hmacsha512256_api.Plo
examples/sodium/libsodium/src/libsodium/crypto_auth/hmacsha512256/cp/.deps/: libsodium_la-hmac_hmacsha512256.Plo  libsodium_la-verify_hmacsha512256.Plo
examples/sodium/libsodium/src/libsodium/crypto_box/.deps/: libsodium_la-crypto_box_easy.Plo  libsodium_la-crypto_box_seal.Plo
examples/sodium/libsodium/src/libsodium/crypto_box/curve25519xsalsa20poly1305/ref/.deps/: libsodium_la-box_curve25519xsalsa20poly1305.Plo  libsodium_la-keypair_curve25519xsalsa20poly1305.Plo
examples/sodium/libsodium/src/libsodium/crypto_hash/.deps/: libsodium_la-crypto_hash.Plo
examples/sodium/libsodium/src/libsodium/crypto_hash/sha256/.deps/: libsodium_la-hash_sha256_api.Plo
examples/sodium/libsodium/src/libsodium/crypto_hash/sha256/cp/.deps/: libsodium_la-hash_sha256.Plo
examples/sodium/libsodium/src/libsodium/crypto_hash/sha512/.deps/: libsodium_la-hash_sha512_api.Plo
examples/sodium/libsodium/src/libsodium/crypto_hash/sha512/cp/.deps/: libsodium_la-hash_sha512.Plo
examples/sodium/libsodium/src/libsodium/crypto_onetimeauth/poly1305/.deps/: libsodium_la-onetimeauth_poly1305.Plo  libsodium_la-onetimeauth_poly1305_try.Plo
examples/sodium/libsodium/src/libsodium/crypto_onetimeauth/poly1305/donna/.deps/: libsodium_la-auth_poly1305_donna.Plo  libsodium_la-verify_poly1305_donna.Plo
examples/sodium/libsodium/src/libsodium/crypto_pwhash/scryptsalsa208sha256/.deps/: libsodium_la-crypto_scrypt-common.Plo  libsodium_la-pbkdf2-sha256.Plo  libsodium_la-pwhash_scryptsalsa208sha256.Plo  libsodium_la-scrypt_platform.Plo
examples/sodium/libsodium/src/libsodium/crypto_pwhash/scryptsalsa208sha256/nosse/.deps/: libsodium_la-pwhash_scryptsalsa208sha256_nosse.Plo
examples/sodium/libsodium/src/libsodium/crypto_pwhash/scryptsalsa208sha256/sse/.deps/: libsodium_la-pwhash_scryptsalsa208sha256_sse.Plo
examples/sodium/libsodium/src/libsodium/crypto_secretbox/.deps/: libsodium_la-crypto_secretbox_easy.Plo
examples/sodium/libsodium/src/libsodium/crypto_sign/ed25519/.deps/: libsodium_la-sign_ed25519_api.Plo
examples/sodium/libsodium/src/libsodium/crypto_stream/.deps/: libsodium_la-crypto_stream.Plo
examples/sodium/libsodium/src/libsodium/crypto_stream/chacha20/.deps/: libsodium_la-stream_chacha20_api.Plo
examples/sodium/libsodium/src/libsodium/crypto_stream/salsa20/.deps/: libsodium_la-stream_salsa20_api.Plo
examples/sodium/libsodium/src/libsodium/crypto_stream/xsalsa20/.deps/: libsodium_la-stream_xsalsa20_api.Plo
examples/sodium/libsodium/src/libsodium/crypto_verify/64/.deps/: libsodium_la-verify_64_api.Plo
examples/sodium/libsodium/src/libsodium/include/: Makefile
examples/sodium/libsodium/src/libsodium/randombytes/salsa20/.deps/: libsodium_la-randombytes_salsa20_random.Plo
examples/sodium/libsodium/src/libsodium/randombytes/sysrandom/.deps/: libsodium_la-randombytes_sysrandom.Plo
examples/sodium/libsodium/src/libsodium/sodium/.deps/: libsodium_la-core.Plo  libsodium_la-utils.Plo
examples/sodium/libsodium/test/: Makefile
examples/sodium/libsodium/test/default/: Makefile
examples/sodium/libsodium/test/default/.deps/: aead_chacha20poly1305.Po  auth.Po  auth2.Po  auth3.Po  auth5.Po  auth6.Po  auth7.Po  box.Po  box2.Po  box7.Po  box8.Po  box_easy.Po  box_easy2.Po  box_seal.Po  box_seed.Po  chacha20.Po  core1.Po  core2.Po  core3.Po  core4.Po  core5.Po  core6.Po  ed25519_convert.Po  generichash.Po  generichash2.Po  generichash3.Po  hash.Po  hash3.Po  onetimeauth.Po  onetimeauth2.Po  onetimeauth7.Po  pwhash.Po  pwhash_scrypt_ll.Po  randombytes.Po  scalarmult.Po  scalarmult2.Po  scalarmult5.Po  scalarmult6.Po  scalarmult7.Po  secretbox.Po  (+17 more)
examples/sort/: sort-instrumented.bpl  sort.bpl
examples/tea/: run.sh  teaencrypt-instrumented.bpl  teaencrypt.bpl
(+17 files in other folders)
